--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
 }
 
 button{
-    border-color: black;
-    border-style: solid;
-    border-width: 3px;
+    border: 3px solid black;    
 }
 
 .gameboard-container{
@@ -13,210 +11,48 @@ button{
     grid-template-columns: repeat(9,10vh);
     grid-template-rows: repeat(9,10vh);
     background-image: url("./imgs/gameboard.png");
-    background-size: 90vh;
+    background-size: contain;
     background-repeat: no-repeat;
-
 }
 
-
-
-
-#C2-R3{
-    grid-column-start: 2;
-    grid-row-start: 3;
-}
-#C2-R4{
-    grid-column-start: 2;
-    grid-row-start: 4;
-}
-#C2-R5{
-    grid-column-start: 2;
-    grid-row-start: 5;
-}
-#C2-R6{
-    grid-column-start: 2;
-    grid-row-start: 6;
-}
-#C3-R3{
-    grid-column-start: 3;
-    grid-row-start: 3;
-}
-#C3-R4{
-    grid-column-start: 3;
-    grid-row-start: 4;
-}
-#C3-R5{
-    grid-column-start: 3;
-    grid-row-start: 5;
-}
-#C3-R6{
-    grid-column-start: 3;
-    grid-row-start: 6;
-}
-#C4-R3{
-    grid-column-start: 4;
-    grid-row-start: 3;
-}
-#C4-R4{
-    grid-column-start: 4;
-    grid-row-start: 4;
-}
-#C4-R5{
-    grid-column-start: 4;
-    grid-row-start: 5;
-}
-#C4-R6{
-    grid-column-start: 4;
-    grid-row-start: 6;
-}
-#C5-R3{
-    grid-column-start: 5;
-    grid-row-start: 3;
-}
-#C5-R4{
-    grid-column-start: 5;
-    grid-row-start: 4;
-}
-#C5-R5{
-    grid-column-start: 5;
-    grid-row-start: 5;
-}
-#C5-R6{
-    grid-column-start: 5;
-    grid-row-start: 6;
-}
-#C6-R3{
-    grid-column-start: 6;
-    grid-row-start: 3;
-}
-#C6-R4{
-    grid-column-start: 6;
-    grid-row-start: 4;
-}
-#C6-R5{
-    grid-column-start: 6;
-    grid-row-start: 5;
-}
-#C6-R6{
-    grid-column-start: 6;
-    grid-row-start: 6;
-}
-#C7-R3{
-    grid-column-start: 7;
-    grid-row-start: 3;
-}
-#C7-R4{
-    grid-column-start: 7;
-    grid-row-start: 4;
-}
-#C7-R5{
-    grid-column-start: 7;
-    grid-row-start: 5;
-}
-#C7-R6{
-    grid-column-start: 7;
-    grid-row-start: 6;
-}
-#C8-R3{
-    grid-column-start: 8;
-    grid-row-start: 3;
-}
-#C8-R4{
-    grid-column-start: 8;
-    grid-row-start: 4;
-}
-#C8-R5{
-    grid-column-start: 8;
-    grid-row-start: 5;
-}
-#C8-R6{
-    grid-column-start: 8;
-    grid-row-start: 6;
+img{
+    background-size: contain;
 }
 
-#life-0{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 8; 
+.card-container{
+    grid-column: 2 / span 7;
+    grid-row: 2 / span 7;
+    display: grid;
+    grid-template-columns: repeat(6,10vh);
+    grid-template-rows: repeat(5,10vh);
+    border: 1px solid green;
+    justify-content: center;
+    align-content: center;
+}
+
+.brain-container{
+    grid-column: 3 / span 5;
+    grid-row: 8;
+    display: grid;
+    grid-template-columns: repeat(5,10vh);
+    grid-template-rows: repeat(1,10vh);
+    border: 1px solid green;
+}
+
+#life-0, #life-1, #life-2, #life-3, #life-4{
     height: 8vh;
+    place-self: center;
 }
-#life-1{
-    grid-column-start: 4;
-    grid-row-start: 8;   
-    height: 8vh;
-}
-#life-2{
-    grid-column-start: 5;
-    grid-row-start: 8;    
-    height: 8vh; 
-}
-#life-3{
-    grid-column-start: 6;
-    grid-row-start: 8; 
-    height: 8vh; 
-}
-#life-4{
-    grid-column-start: 7;
-    grid-row-start: 8;    
-    height: 8vh; 
-}
-
-
-
-
-
-
-/* .col-one{
-    grid-column-start: 2;
-    grid-row-start: 4;
-}
-
-.col-two{
-    grid-column-start: 3;
-    grid-row-start: 4;
-}
-
-.col-three{
-    grid-column-start: 4;
-    grid-row-start: 4;
-}
-
-.col-four{
-    grid-column-start: 5;
-    grid-row-start: 4;
-}
-
-.col-five{
-    grid-column-start: 6;
-    grid-row-start: 4;
-}
-
-.col-six{
-    grid-column-start: 7;
-    grid-row-start: 4;
-} */
 
 .game-squares{
     background-color: rgb(211, 33, 199);
     height: 80%;
     width: 80%;
     margin: 0;
+    place-self: center;
 }
 
-.medium-level{
-    visibility: hidden;
+.hidden{
+    display: none;
 }
 
-.hard-level{
-    visibility: hidden;
-}
-
-
-
-
-
-
-
-TO DO -> create buttons for easy-medium-hard -> this will start game
-
-TO DO
