--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@ img{
     background-size: contain;
 }
 
+img.game-squares{
+    border: 2px solid black;
+}
+
+/* .brains{
+    display: none;
+} */
+
 .card-container{
     grid-column: 2 / span 7;
     grid-row: 2 / span 7;
@@ -52,7 +60,7 @@ img{
     place-self: center;
 }
 
-.hidden{
+.hidden, .brains{
     display: none;
 }
 
