--- a/style.css
+++ b/style.css
@@ -16,32 +16,108 @@ button{
 }
 
 
-.card-container{
+.card-container {
     grid-column: 2 / span 7;
     grid-row: 2 / span 7;
     display: grid;
     grid-template-columns: repeat(6,10vh);
     grid-template-rows: repeat(5,10vh);
-    border: 1px solid green;
     justify-content: center;
     align-content: center;
 }
 
+.gameover-container {
+    display: grid;
+    grid-template-columns: repeat(9,10vh);
+    grid-template-rows: repeat(9,10vh);
+    /*
+    background-image: url("./imgs/gameover.png");
+    background-size: 60%;
+    background-repeat: no-repeat; */
+    align-items: center;
+}
+
+.gameover-image {
+    grid-column: 3 / span 7;
+    grid-row: 4 / span 2;
+}
+
+.sad-heart{
+    grid-column: 4 / span 2;
+    grid-row: 3;
+    max-height: 20vh;
+}
+
+.level-select{
+    grid-column: 4 / span 3;
+    grid-row: 4 /span 3;
+    display: grid;
+    grid-template-columns: 300vh;
+    grid-template-rows: repeat(3,10vh);
+    display: none;
+}
+
 .brain-container{
-    grid-column: 3 / span 5;
+    grid-column: 3 / span 8;
     grid-row: 8;
     display: grid;
     grid-template-columns: repeat(5,10vh);
     grid-template-rows: repeat(1,10vh);
-    border: 1px solid green;
+
 }
+
+.easy{
+    grid-column: 4 / span 3;
+    grid-row: 4;
+    display: grid;
+    grid-template-columns: 30vh;
+    grid-template-rows: 10vh;
+    /* border: 5px solid red; */    
+} 
+.medium{
+    grid-column: 4 / span 3;
+    grid-row: 5;
+    display: grid;
+    grid-template-columns: 30vh;
+    grid-template-rows: 10vh;
+    /* border: 5px solid red; */
+}
+.hard{
+    grid-column: 4 / span 3;
+    grid-row: 6;
+    display: grid;
+    grid-template-columns: 30vh;
+    grid-template-rows: 10vh;
+    /* border: 5px solid red; */
+}  
 
 .play-again{
     grid-column: 4 / span 3;
-    grid-row: 7;
+    grid-row: 6;
     display: grid;
-    grid-template-columns:30vh;
+    grid-template-columns: 30vh;
     grid-template-rows: 10vh;
+    /* border: 5px solid red; */
+}
+
+.gameover{
+    grid-column: 1 / span 9;
+    grid-row: 3 / span 6;
+    display: grid;
+    grid-template-columns: repeat(6, 10vh);
+    grid-template-rows: 10vh;
+}
+
+.button-container, .play-again-container{
+    position: fixed;
+    display: grid;
+    justify-content: center;
+    align-items: center;;
+    grid-column: 2 / span 7;
+    grid-row: 2 / span 7;
+
+    grid-template-columns: repeat(9,10vh);
+    grid-template-rows: repeat(9,10vh);
     justify-content: center;
     align-content: center;
 }
@@ -49,17 +125,11 @@ button{
 button{
     border-radius: 100px;
     font-size: 3vh;
+    border: 5px solid black;
+    height: 8vh;
+    align-content: bottom;
 }
 
-.gameover-container{
-    grid-column: 2/ span 7;
-    grid-row: 4 / span 3;
-    display: grid;
-    background-image: url('./imgs/gameover.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    display: none;
-}
 
 img{
     background-size: contain;
@@ -69,11 +139,32 @@ img.game-squares{
     border: 2px solid black;
 }
 
-.brains4, .brains3, .brains2, .brains1, .brains0{
+.brains4 {
+    grid-column: 5;
     height: 8vh;
     place-self: center;
-    display: none;
 }
+.brains3 {
+    grid-column: 4;
+    height: 8vh;
+    place-self: center;
+}
+.brains2 {
+    grid-column: 3;
+    height: 8vh;
+    place-self: center;
+}
+.brains1 {
+    grid-column: 2;
+    height: 8vh;
+    place-self: center;
+}
+.brains0 {
+    grid-column: 1;
+    height: 8vh;
+    place-self: center;
+}
+
 
 .game-squares{
     background-color: rgb(211, 33, 199);
@@ -83,7 +174,7 @@ img.game-squares{
     place-self: center;
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
